NBNP-142 Add/configure mobile toggle feature for sidebar (Facets) region

--- a/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.info.yml
+++ b/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.info.yml
@@ -18,7 +18,8 @@ regions:
   help: 'Help'
   breadcrumb: Breadcrumb
   content: 'Content'
-  sidebar_first: 'Primary'
+  sidebar_first_top: 'Primary Top (Facets Toggle)'
+  sidebar_first: 'Primary (Facets)'
   sidebar_second: 'Secondary'
   footer_top_first: 'Footer top first'
   footer_top_second: 'Footer top second'
