NBNP-446 Remove redundant sort from date range slider facet

--- a/config-yml/facets.facet.publication_years.yml
+++ b/config-yml/facets.facet.publication_years.yml
@@ -43,24 +43,17 @@ only_visible_when_facet_source_is_visible: true
 show_only_one_result: true
 show_title: true
 processor_configs:
-  active_widget_order:
-    processor_id: active_widget_order
-    weights:
-      sort: 20
-    settings:
-      sort: DESC
-  count_widget_order:
-    processor_id: count_widget_order
-    weights:
-      sort: 30
-    settings:
-      sort: DESC
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
       sort: 40
     settings:
       sort: ASC
+  hierarchy_processor:
+    processor_id: hierarchy_processor
+    weights:
+      build: 100
+    settings: {  }
   range_slider:
     processor_id: range_slider
     weights:
