NBNP-446 Restore facet loading animation/revise JS asset/move to module library

--- a/custom/modules/newspapers_core/newspapers_core.libraries.yml
+++ b/custom/modules/newspapers_core/newspapers_core.libraries.yml
@@ -11,6 +11,13 @@ claro-overrides:
     theme:
       css/claro-admin-overrides.css: {}
 
+facet_loading:
+  js:
+    js/newspapers_core.facet_loading.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+
 pubform:
   css:
     theme:
