NBNP-443 Replace Title Search view | Reset button w/ custom reset link

--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -566,7 +566,7 @@ display:
         type: basic
         options:
           submit_button: 'Browse/Search Titles'
-          reset_button: true
+          reset_button: false
           reset_button_label: 'Show All Titles'
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
