NBNP-443 Don't show '0' date range facet re: no search results (digital page lister)

--- a/config-yml/facets.facet.publication_year.yml
+++ b/config-yml/facets.facet.publication_year.yml
@@ -43,12 +43,24 @@ only_visible_when_facet_source_is_visible: true
 show_only_one_result: true
 show_title: true
 processor_configs:
+  count_limit:
+    processor_id: count_limit
+    weights:
+      build: 50
+    settings:
+      minimum_items: 1
+      maximum_items: null
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
       sort: 40
     settings:
       sort: ASC
+  hierarchy_processor:
+    processor_id: hierarchy_processor
+    weights:
+      build: 100
+    settings: {  }
   range_slider:
     processor_id: range_slider
     weights:
