NBNP-142 Add mobile facet toggle to issue browse pages

--- a/config-yml/block.block.sidebarfacettoggle.yml
+++ b/config-yml/block.block.sidebarfacettoggle.yml
@@ -22,4 +22,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/search\r\n/page-search"
+    pages: "/search\r\n/page-search\r\n/serials/browse/*"
