--- a/custom/modules/newspapers_core/newspapers_core.libraries.yml
+++ b/custom/modules/newspapers_core/newspapers_core.libraries.yml
@@ -7,9 +7,7 @@ copy_citation:
   js:
     js/newspapers_core.copy_citation.js: {}
   dependencies:
-    - core/jquery
-    - core/drupal
-    - clipboardjs/clipboardjs
+    - clipboardjs/drupal
 
 facet_loading:
   js:
