--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -321,7 +321,7 @@ display:
           element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
