--- a/custom/modules/newspapers_core/newspapers_core.libraries.yml
+++ b/custom/modules/newspapers_core/newspapers_core.libraries.yml
@@ -49,9 +49,9 @@ search_input_required:
 tab-search:
   css:
     theme:
-      css/newspapers_core.tab_search.min.css: { minified: true }
+      css/newspapers_core.tab_search.css: { }
   js:
-    js/newspapers_core.tab_search.js: {}
+    js/newspapers_core.tab_search.min.js: { minified: true }
   dependencies:
     - core/jquery
 
