NBNP-396 Enable facet preservation to title search query

--- a/configuration/views.view.search.yml
+++ b/configuration/views.view.search.yml
@@ -794,6 +794,8 @@ display:
         options:
           bypass_access: false
           skip_access: false
+          preserve_facet_query_args: true
+          query_tags: {  }
       relationships: {  }
       css_class: search-results
       use_ajax: false
