NBNP-443 Use Search View|Form Reset, access=true on query and/or facet

--- a/configuration/views.view.search.yml
+++ b/configuration/views.view.search.yml
@@ -566,10 +566,10 @@ display:
         type: basic
         options:
           submit_button: 'Browse/Search Titles'
-          reset_button: false
+          reset_button: true
           reset_button_label: 'Show All Titles'
           exposed_sorts_label: 'Sort by'
-          expose_sort_order: true
+          expose_sort_order: false
           sort_asc_label: Asc
           sort_desc_label: Desc
       access:
