--- a/configuration/views.view.digital_titles_lister.yml
+++ b/configuration/views.view.digital_titles_lister.yml
@@ -25,7 +25,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Digitized Titles'
+      title: 'Current List of Digitized Titles'
       fields:
         parent_title:
           id: parent_title
@@ -693,7 +693,7 @@ display:
           admin_label: 'Search Tips and Note'
           plugin_id: text_custom
           empty: true
-          content: "<div  id=\"searchTips\" class=\" collapse\">\r\n<div class=\"card\">\r\n  <div class=\"card-body\">\r\n      <h2 class=\"card-title sr-only\">Search Term Guidelines</h2>\r\n      <div class=\"description m-0\">\r\n        <ul class=\"mb-0 px-3\">\r\n          <li>Use uppercase AND operator to limit to all terms used. eg. <code>cattle AND Fredericton</code></li>\r\n          <li>Use quotation marks to do phrase searching. eg. <code>&quot;5000 pairs to select&quot;</code></li>\r\n          <li>After searching, use the filters to limit by date, publication and location</li>\r\n        </ul>\r\n       </div>\r\n  </div>\r\n</div>\r\n</div>\r\n\r\n<div class=\"alert bg-light border d-flex flex-column flex-md-row\">\r\n  <div class=\"mr-2\"><strong>Note:</strong></div>\r\n  <div>This is the current listing of newspapers that have been digitized. New content is being continually added, including extending the runs of existing titles.\r\n    <a href=\"/project\" class=\"btn btn-link p-0 text-left\">Learn more about the New Brunswick Historical Newspapers Project</a>\r\n  </div>\r\n</div>\r\n"
+          content: "<div  id=\"searchTips\" class=\" collapse\">\r\n<div class=\"card\">\r\n  <div class=\"card-body\">\r\n      <h2 class=\"card-title sr-only\">Search Term Guidelines</h2>\r\n      <div class=\"description m-0\">\r\n        <ul class=\"mb-0 px-3\">\r\n          <li>Use uppercase AND operator to limit to all terms used. eg. <code>cattle AND Fredericton</code></li>\r\n          <li>Use quotation marks to do phrase searching. eg. <code>&quot;5000 pairs to select&quot;</code></li>\r\n          <li>After searching, use the filters to limit by date, publication and location</li>\r\n        </ul>\r\n       </div>\r\n  </div>\r\n</div>\r\n</div>\r\n\r\n<div class=\"alert bg-light border d-flex flex-column flex-md-row\">\r\n  <div class=\"mr-2\"><strong>Note:</strong></div>\r\n  <div><span class=\"d-none\">This is the current listing of newspapers that have been digitized.</span> New content is being continually added, including extending the runs of existing titles.<br>\r\n    <a href=\"/project\" class=\"btn btn-link p-0 text-left\">Learn more about the New Brunswick Historical Newspapers Project</a>\r\n  </div>\r\n</div>"
           tokenize: false
         result:
           id: result
