NBNP-452 Change Search API Solr Highlighter prefix/suffix

--- a/configuration/search_api.index.pages_newspapers_lib_unb_ca.yml
+++ b/configuration/search_api.index.pages_newspapers_lib_unb_ca.yml
@@ -133,8 +133,8 @@ processor_settings:
   highlight:
     weights:
       postprocess_query: 0
-    prefix: '<strong>'
-    suffix: '</strong>'
+    prefix: '<em>'
+    suffix: '</em>'
     excerpt: true
     excerpt_always: false
     excerpt_length: 295
